--- a/css/main.css
+++ b/css/main.css
@@ -42,12 +42,17 @@ button {
   height: 26px;
 }
 
+#p-guess-word {
+  margin-top: 50vmin;
+}
+
 .number-of-lives {
   display: flex;
   justify-content: center;
-  margin-top: 15vh;
   font-size: 32px;
   color: aquamarine;
+  height: 25px;
+  margin-top: 20vmin;
 }
 .word-wrapper {
   flex-direction: row;
@@ -58,11 +63,18 @@ button {
   border: none;
 }
 
+.img-wrapper {
+  display: flex;
+
+  height: 200px;
+}
+
 img {
   display: flex;
-  justify-content: center;
   align-items: center;
+  height: 200px;
 }
+
 aside {
   display: flex;
   justify-content: flex-end;
