--- a/css/main.css
+++ b/css/main.css
@@ -51,17 +51,17 @@ button {
   flex-direction: row;
   display: flex;
   justify-content: center;
-  margin-top: 10vmin;
+  margin-top: 20vh;
   width: 100%;
   border: none;
 }
 
 .img-wrapper {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 15vmin;
-  height: 200px;
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  margin: auto;
+  margin-top: 30vh;
 }
 
 img {
@@ -70,7 +70,8 @@ img {
 
 aside {
   display: flex;
-  justify-content: flex-end;
+  flex-direction: row;
+  justify-content: center;
   margin: 72px 72px;
 }
 
